@@ -1,7 +1,7 @@
 
 # runtest generated files
-testrun.log
-testrun.sum
+*.log
+*.sum
 
 # locally used helper scripts
 package.sh
